# OSKernel2025_AstrancE

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  submit.sh
App_oscomp/: .AstrancE  .axconfig.old.toml  .axconfig.toml  .crates.toml  .crates2.json  .gitignore  Cargo.toml  Makefile  README.md  build.rs  build_img.sh  link_apps.S  tmp  vendor.tar.gz.ac
App_oscomp/.cargo/: config.toml
App_oscomp/.github/workflows/: build.yml  docs.yml.disabled  test.yml  test.yml.disabled
App_oscomp/configs/: loongarch64.toml  riscv64.toml
App_oscomp/rootfs/loongarch64/: busybox_cmd2.txt  glibc_basic.sh  libctest_testcode.sh  ltp-ok-la.txt  ltp_ok.txt  test_busybox.sh  test_busybox2.sh  test_ltp.sh  test_ltp_glibc.sh  testrun.sh  testrun_glibc.sh
App_oscomp/rootfs/loongarch64/root/: .gitconfig
App_oscomp/rootfs/loongarch64/root/.config/git/: config
App_oscomp/rootfs/riscv64/: busybox_cmd.txt  ltp-ok-rv-glibc.txt  ltp-ok-rv.txt  ltp.txt  ltp_ok.txt  test.sh  test_busybox.sh  test_busybox2.sh  test_ltp.sh  test_ltp_glibc.sh  testltp.sh  testrun.sh  testrun_glibc.sh
App_oscomp/scripts/: config.toml  config.toml.template  fetch.sh  set_ax_root.sh
App_oscomp/scripts/make/: create_disk.sh  disk.mk  oscomp.mk
App_oscomp/src/: loader.rs  main.rs  mm.rs  task.rs  testcase.rs  testcase_list  testcase_list.jsonc
AstrancE/: .gitignore  .gitmodules  Cargo.toml  Makefile  submit.sh
AstrancE/.cargo/: config.toml
AstrancE/api/arceos_posix_api/: Cargo.toml  build.rs
AstrancE/api/arceos_posix_api/src/: lib.rs  utils.rs
AstrancE/api/arceos_posix_api/src/imp/: fd_ops.rs  fs.rs  path_link.rs  pipe.rs  sys.rs
AstrancE/api/arceos_posix_api/src/imp/io_mpx/: mod.rs  select.rs
AstrancE/api/axfeat/: Cargo.toml
AstrancE/configs/: defconfig.toml  version.toml
AstrancE/crates/axfdt/: Cargo.toml
AstrancE/crates/axfdt/src/: lib.rs  structs.rs
AstrancE/crates/axmm_crates/memory_addr/src/: addr.rs  page.rs
AstrancE/crates/axmm_crates/memory_set/: Cargo.toml
AstrancE/crates/axmm_crates/memory_set/src/: set.rs
AstrancE/crates/virtio-drivers/: Cargo.toml
AstrancE/modules/axalloc/: Cargo.toml
AstrancE/modules/axdriver/: Cargo.toml  build.rs
AstrancE/modules/axdriver/src/: drivers.rs  lib.rs  macros.rs
AstrancE/modules/axdriver/src/bus/: pci.rs
AstrancE/modules/axdriver/src/structs/: dyn.rs  static.rs
AstrancE/modules/axfs/: Cargo.toml
AstrancE/modules/axfs/src/: fops.rs  lib.rs  mounts.rs  root.rs
AstrancE/modules/axfs/src/api/: mod.rs
AstrancE/modules/axfs/src/dyn_fs/: mod.rs
AstrancE/modules/axfs/src/dyn_fs/devfs/: mod.rs  shm.rs
AstrancE/modules/axfs/src/fs/: lwext4_rust.rs  mod.rs
AstrancE/modules/axfs/src/fs/extra/devfs/: shm.rs
AstrancE/modules/axhal/: Cargo.toml  build.rs  linker.lds.S
AstrancE/modules/axhal/src/: cpu.rs  lib.rs  trap.rs
AstrancE/modules/axhal/src/arch/loongarch64/: context.rs
AstrancE/modules/axhal/src/arch/riscv/: mod.rs  trap.rs
AstrancE/modules/axhal/src/platform/: mod.rs
AstrancE/modules/axhal/src/platform/dummy/: mod.rs
AstrancE/modules/axhal/src/platform/loongarch64_2k1000/: boot.rs  console.rs  ls2k1000.dtsi  ls2k1000_dp.dts  mod.rs
AstrancE/modules/axhal/src/platform/loongarch64_qemu_virt/: boot.rs
AstrancE/modules/axhal/src/platform/riscv64_visionfive2/: boot.rs  dtb.asm  fdt.rs  mod.rs
AstrancE/modules/axlog/src/: lib.rs
AstrancE/modules/axmm/: Cargo.toml
AstrancE/modules/axmm/src/: aspace.rs  heap.rs  lib.rs  shm.rs
AstrancE/modules/axmm/src/aspace/: mmap.rs  mod.rs
AstrancE/modules/axmm/src/backend/: alloc.rs  frame.rs  mod.rs
AstrancE/modules/axmm/src/shm/: mod.rs  posix.rs
AstrancE/modules/axruntime/: Cargo.toml
AstrancE/modules/axruntime/src/: lib.rs  sysinfo.rs
AstrancE/modules/axsignal/: Cargo.toml
AstrancE/modules/axsignal/src/: default.rs  lib.rs  siginfo.rs
AstrancE/modules/axsyscall/: Cargo.toml
AstrancE/modules/axsyscall/src/: lib.rs
AstrancE/modules/axsyscall/src/syscall_imp/: fs.rs  io.rs  mod.rs
AstrancE/modules/axtask/src/: run_queue.rs  task.rs  wait_queue.rs
AstrancE/scripts/make/: cargo.mk  features.mk
AstrancE/ulib/axlibc/include/: fcntl.h
AstrancE/ulib/axlibc/include/sys/: stat.h
AstrancE/ulib/axlibc/src/: rand.rs
AstrancE/ulib/axmono/: Cargo.toml
AstrancE/ulib/axmono/src/: ctypes.rs  dynamic.rs  elf.rs  lib.rs  ptr.rs
AstrancE/ulib/axmono/src/fs/: irqs.rs  mod.rs
AstrancE/ulib/axmono/src/mm/: mmap.rs  mod.rs
AstrancE/ulib/axmono/src/pthread/: mod.rs
AstrancE/ulib/axmono/src/syscall/: io.rs  ipc.rs  mm.rs  mod.rs  process.rs  pthread.rs  time.rs
AstrancE/ulib/axmono/src/task/: exit.rs  mod.rs  process.rs  signal.rs  time.rs  wait.rs
AstrancE/ulib/axsyscall/src/: lib.rs  utils.rs
AstrancE/ulib/axsyscall/src/syscall_imp/: fd.rs  fs.rs  io.rs  ipc.rs  mm.rs  process.rs  signal.rs  sys.rs
