[package]
name = "aa-oscomp"
version = "0.1.0"
edition = "2024"

[features]
[dependencies]
axstd = { git = "https://github.com/AstranciA/AstrancE.git", features = ["paging"]}
axhal = { git = "https://github.com/AstranciA/AstrancE.git", features = ["uspace"]}
axfs = { git = "https://github.com/AstranciA/AstrancE.git"}
axtask = { git = "https://github.com/AstranciA/AstrancE.git"}
axruntime = { git = "https://github.com/AstranciA/AstrancE.git", features = ["multitask", "fs"]}
axsyscall = { git = "https://github.com/AstranciA/AstrancE.git", features = ["multitask"]}
arceos_posix_api = { git = "https://github.com/AstranciA/AstrancE.git", features = ["uspace","fd"] }
axlog = {git = "https://github.com/AstranciA/AstrancE.git" }
axns = {git = "https://github.com/AstranciA/AstrancE.git"}
axsync = {git = "https://github.com/AstranciA/AstrancE.git"}
axalloc = {git = "https://github.com/AstranciA/AstrancE.git"}
axmm = {git = "https://github.com/AstranciA/AstrancE.git"}
axconfig = {git = "https://github.com/AstranciA/AstrancE.git"}
axmono = {git = "https://github.com/AstranciA/AstrancE.git"}
#axfeat = {git = "https://github.com/AstranciA/AstrancE.git", features=["fs"]}
axerrno = "0.1"
xmas-elf = "0.9.1"
kernel-elf-parser = "0.3.2"
linkme = "0.3.32"
bitflags = "2.9.0"
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
num_enum = {version = "0.7.3",default-features = false }
syscalls = {version = "0.6.18",default-features = false }
crate_interface = "0.1.4"
memory_addr = "0.3.2"
[build-dependencies]
acbat = { git = "https://github.com/AstranciA/AstrancE.git" }
toml_edit = "0.22.24"

[patch.crates-io]
page_table_multiarch = { git = "https://github.com/Mivik/page_table_multiarch.git", rev = "19ededd" }
page_table_entry = { git = "https://github.com/Mivik/page_table_multiarch.git", rev = "19ededd" }
