[package]
name = "aa-oscomp"
version = "0.1.0"
edition = "2024"

[features]
[dependencies]
axstd = { git = "https://github.com/AstranciA/AstrancE.git", features = [
  "paging",
] }
axhal = { git = "https://github.com/AstranciA/AstrancE.git", features = [
  "uspace",
] }
axfs = { git = "https://github.com/AstranciA/AstrancE.git" }
axtask = { git = "https://github.com/AstranciA/AstrancE.git" }
axruntime = { git = "https://github.com/AstranciA/AstrancE.git", features = [
  "multitask",
  "fs",
] }
axsyscall = { git = "https://github.com/AstranciA/AstrancE.git", features = [
  "multitask",
  "fs",
  "fd",
] }
arceos_posix_api = { git = "https://github.com/AstranciA/AstrancE.git", features = [
  "uspace",
  "fd",
] }
axlog = { git = "https://github.com/AstranciA/AstrancE.git" }
axns = { git = "https://github.com/AstranciA/AstrancE.git" }
axsync = { git = "https://github.com/AstranciA/AstrancE.git" }
axalloc = { git = "https://github.com/AstranciA/AstrancE.git" }
axmm = { git = "https://github.com/AstranciA/AstrancE.git" }
axconfig = { git = "https://github.com/AstranciA/AstrancE.git" }
axmono = { git = "https://github.com/AstranciA/AstrancE.git" }
#axfeat = {git = "https://github.com/AstranciA/AstrancE.git", features=["fs"]}
axerrno = "0.1"
linkme = "0.3.32"
bitflags = "2.9.0"
xmas-elf = "0.9.1"
kernel-elf-parser = "0.3.2"
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
num_enum = { version = "0.7.3", default-features = false }
syscalls = { git = "https://github.com/jasonwhite/syscalls.git", default-features = false, features = [
  "loongarch64",
  "riscv64",
] }
lazyinit = "0.2"
[build-dependencies]
acbat = { git = "https://github.com/AstranciA/AstrancE.git" }
toml_edit = "0.22.24"
